Fix too big margin in upsell large variant

--- a/frontend/src/metabase/admin/upsells/components/UpsellCard.module.css
+++ b/frontend/src/metabase/admin/upsells/components/UpsellCard.module.css
@@ -22,6 +22,7 @@
 
 .LargeUpsellCTALink {
   margin: 0;
-  margin-left: 3rem;
+  margin-inline-start: 2rem;
   width: 10rem;
+  max-width: 100%;
 }
